dashboards/pgadmin/controllers.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: pgadmin
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/part-of: dashboards
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: pgadmin
      app.kubernetes.io/name: pgadmin
      app.kubernetes.io/part-of: dashboards
  template:
    metadata:
      labels:
        app.kubernetes.io/component: pgadmin
        app.kubernetes.io/name: pgadmin
        app.kubernetes.io/part-of: dashboards
    spec:
      containers:
      - name: pgadmin
        image: pgadmin/pgadmin:latest
        ports:
        - name: http
          containerPort: 80
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 32Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/pgadmin
      volumes:
      - name: data
        emptyDir: {}
