dashboards/pgadmin/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: pgadmin
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: dashboard
  name: pgadmin
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: postgresql.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - postgresql.progamesigner.dev
    secretName: tls-dev-progamesigner
